--- a/platformio.ini
+++ b/platformio.ini
@@ -20,4 +20,6 @@ build_flags =
 lib_deps = 
     lovyan03/LovyanGFX@^1.1.12
     DFRobot/DFRobotDFPlayerMini@^1.0.6
+    madhephaestus/ESP32Servo@^0.13.0
+    Wire
     SPI
