--- a/platformio.ini
+++ b/platformio.ini
@@ -15,10 +15,16 @@ build_flags =
     ; Tối ưu hóa cho performance
     -O2
     -DCORE_DEBUG_LEVEL=0
+    ; Tell LVGL where to find lv_conf.h
+    -I${PROJECT_DIR}/include
+    -DLV_CONF_INCLUDE_SIMPLE=1
 
-; Thư viện LovyanGFX với DMA support
+; Thư viện LovyanGFX với DMA support và LVGL cho font tiếng Việt
 lib_deps = 
-    lovyan03/LovyanGFX@^1.1.12
-    DFRobot/DFRobotDFPlayerMini@^1.0.6
+    lovyan03/LovyanGFX@1.2.7
+    h2zero/NimBLE-Arduino@2.3.4
+    bblanchon/ArduinoJson@^6.21.3
+    fbiego/ESP32Time@^2.0.6
+    lvgl/lvgl@^8.3.9
     Wire
     SPI
